--- a/ui/ui-styles.css
+++ b/ui/ui-styles.css
@@ -200,3 +200,11 @@ button[disabled],
   0% {transform:rotate(0deg);}
   100% {transform:rotate(360deg);}
 }
+/*
+
+[ui][shape="rounded"]{border-radius:var(--ui-border-radius-rounded);}
+[ui][shape="square"]{border-radius:var(--ui-border-radius-square);}
+[ui][shape="pill"]{border-radius:var(--ui-border-radius-pill);}
+[ui][shape="circle"]{border-radius:var(--ui-border-radius-circle);}
+
+*/
