--- a/ui/ui-breadcrumb/ui-breadcrumb.css
+++ b/ui/ui-breadcrumb/ui-breadcrumb.css
@@ -1,15 +1,47 @@
-ui-text{
-  line-height:1.5;
-  width:100%;}
+ui-breadcrumb{
+  font-size:var(--ui-breadcrumb-font-size);}
 
-ui-text[text-align="start"]{
-  text-align:start;}
+ui-breadcrumb [data-ui="breadcrumb-link"]{
+  color:var(--ui-breadcrumb-font-color);
+  text-decoration:none;
+  transition-duration:var(--ui-transition-duration);
+  transition-property:color;}
 
-ui-text[text-align="end"]{
-  text-align:end;}
+@media (hover: hover){
+  ui-breadcrumb [data-ui="breadcrumb-link"]:hover{
+    color:var(--ui-breadcrumb-font-color-hover);}
+}
 
-ui-text[text-align="center"]{
-  text-align:center;}
+ui-breadcrumb [data-ui="breadcrumb-list"]{
+  display:flex;
 
-ui-text[text-align="justify"]{
-  text-align:justify;}
+  flex-wrap:wrap;
+  list-style:none;
+  padding:0;
+  margin:0;}
+
+ui-breadcrumb [data-ui="breadcrumb-item"]{
+  display:flex;
+  align-items:center;}
+
+ui-breadcrumb [data-ui="breadcrumb-item"] ui-icon[data-ui="breadcrumb-separator"]{
+  width:var(--ui-breadcrumb-icon-size);
+  height:100%;
+  padding-inline:4px;}
+
+ui-breadcrumb [data-ui="breadcrumb-item"] ui-icon[data-ui="breadcrumb-item-icon"]{
+  width:var(--ui-breadcrumb-icon-size);
+  height:100%;
+  padding-inline-start:2px;
+  padding-inline-end:6px;
+  margin-top:-2px;}
+
+/* color */
+ui-breadcrumb[color="default"]{
+  --ui-breadcrumb-font-color:var(--ui-color-gray-150);
+  --ui-breadcrumb-font-color-hover:var(--ui-color-white);}
+
+/* size */
+ui-breadcrumb[size="default"]{
+  --ui-breadcrumb-font-size:14px;
+  --ui-breadcrumb-icon-size:28px;}
