--- a/ui/ui-styles.css
+++ b/ui/ui-styles.css
@@ -1,4 +1,5 @@
 @import './ui-accordion/ui-accordion.css';
+@import './ui-alert/ui-alert.css';
 @import './ui-button/ui-button.css';
 @import './ui-breadcrumb/ui-breadcrumb.css';
 @import './ui-checkbox/ui-checkbox.css';
