--- a/ui/ui-styles.css
+++ b/ui/ui-styles.css
@@ -3,7 +3,7 @@
 @import './ui-button/ui-button.css';
 @import './ui-breadcrumb/ui-breadcrumb.css';
 @import './ui-checkbox/ui-checkbox.css';
-@import './ui-divider/ui-divider.css';
+@import './ui-separator/ui-separator.css';
 @import './ui-field/ui-field.css';
 @import './ui-focus/ui-focus.css';
 @import './ui-icon/ui-icon.css';
