--- a/ui/ui-checkbox/ui-checkbox.css
+++ b/ui/ui-checkbox/ui-checkbox.css
@@ -60,8 +60,8 @@ ui-checkbox[shape="square"]{
 ui-checkbox[shape="circle"]{
   --ui-checkbox-border-radius:var(--ui-border-radius-circle);}
 
-/* color */
-ui-checkbox[color="default"]{
+/* theme */
+ui-checkbox[theme="default"]{
   --ui-checkbox-background-color:var(--ui-color-gray-800);
   --ui-checkbox-color:var(--ui-color-white);
   --ui-checkbox-border-color:var(--ui-color-gray-500);
