--- a/ui/ui-alert/ui-alert.css
+++ b/ui/ui-alert/ui-alert.css
@@ -5,12 +5,25 @@ ui-alert{
   background-color:var(--ui-alert-background-color);
   row-gap:var(--ui-alert-row-gap);
   width:100%;
-  max-width:400px;}
+  max-width:500px;}
+
+ui-alert [data-ui="alert-icon"]{
+  display:flex;
+  align-items:center;
+  padding-inline-end:20px;
+  height:100%;
+  color:var(--ui-alert-icon-color);}
+
+ui-alert [data-ui="alert-icon"] ui-icon{
+  width:var(--ui-alert-icon-size);
+  height:var(--ui-alert-icon-size);}
 
 ui-alert [data-ui="alert-body"]{
   display:flex;
   flex-direction:column;
   flex-grow:1;
+  min-width:0;
+  padding-block-start:2px;
   row-gap:var(--ui-alert-row-gap);}
 
 ui-alert [data-ui="alert-header"]{
@@ -20,15 +33,16 @@ ui-alert [data-ui="alert-label"]{
   -webkit-user-select:text;
   user-select:text;
   flex-grow:1;
+  padding-inline-end:10px;
+  line-height:var(--ui-line-height-150);
   font-size:var(--ui-alert-label-font-size);
   color:var(--ui-alert-label-font-color);}
 
 ui-alert [data-ui="alert-close"]{
   display:flex;
-  align-items:center;
+  border-radius:var(--ui-border-radius-circle);
   flex-shrink:0;
-  margin-block-start:-12px;
-  margin-inline-end:-16px;
+  margin-top:2px;
   width:var(--ui-alert-close-icon-size);
   height:var(--ui-alert-close-icon-size);
   outline-offset:2px;
@@ -39,13 +53,12 @@ ui-alert [data-ui="alert-close"]{
   transition-property:outline-color;}
 
 ui-alert [data-ui="alert-close"]:focus-visible{
-  outline-color:var(--ui-alert-outline-color);
-}
+  outline-color:var(--ui-alert-outline-color);}
 
 ui-alert [data-ui="alert-close"] ui-icon{
   color:var(--ui-alert-close-icon-color);
-  width:100%;
-  height:100%;
+  width:var(--ui-alert-close-icon-size);
+  height:var(--ui-alert-close-icon-size);
   transition-duration:var(--ui-transition-duration);
   transition-property:color;}
 
@@ -57,11 +70,11 @@ ui-alert [data-ui="alert-close"] ui-icon{
 ui-alert [data-ui="alert-content"]{
   -webkit-user-select:text;
   user-select:text;
-
   line-height:var(--ui-line-height-150);
   font-size:var(--ui-alert-content-font-size);
   color:var(--ui-alert-content-font-color);}
 
+/* shape */
 ui-alert[shape="rounded"]{
   --ui-alert-border-radius:var(--ui-border-radius-rounded);}
 
@@ -73,14 +86,16 @@ ui-alert[theme="default"]{
   --ui-alert-background-color:var(--ui-color-gray-800);
   --ui-alert-label-font-color:var(--ui-color-white);
   --ui-alert-content-font-color:var(--ui-color-gray-350);
+  --ui-alert-icon-color:var(--ui-color-white);
   --ui-alert-close-icon-color:var(--ui-color-gray-350);
   --ui-alert-close-icon-color-hover:var(--ui-color-white);
   --ui-alert-outline-color:var(--ui-color-gray-500);}
 
 /* size */
 ui-alert[size="default"]{
-  --ui-alert-padding:16px 20px;
+  --ui-alert-padding:16px 18px 16px 20px;
   --ui-alert-label-font-size:14px;
   --ui-alert-content-font-size:14px;
   --ui-alert-row-gap:8px;
-  --ui-alert-close-icon-size:16px;}
+  --ui-alert-icon-size:24px;
+  --ui-alert-close-icon-size:17px;}
